--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -3,6 +3,7 @@
 <head>
   <title>Đơn Hàng</title>
   <link rel="stylesheet" href="styles.css">
+
   <script src="https://code.highcharts.com/highcharts.js"></script>
   <style>
 
@@ -57,7 +58,7 @@
 </head>
 
 <body class="bg-gray-200">
-<div class="flex " id="dataAll">
+<div class="flex ">
   <!--Side Navbar-->
   <div class="bg-indigo-900 w-1/6">
     <div class=" bg-indigo-800">
@@ -75,25 +76,23 @@
     </a>
 
     <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
-       style=" text-decoration: none;display: flex ">
+       style=" text-decoration: none ">
       <div class="flex" style=" padding: 12px;">
         <div>
           <img class="w-5 h-5" src="dashboard.png" alt="">
         </div>
         <div class="mx-3 text-sm text-gray-100 ">Đơn Hàng</div>
       </div>
-      <span class="badge" style="color: white;font-size: 14px;">\{{donHangMoi}}</span>
     </a>
 
 
-    <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none;display: flex">
+    <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
       <div class="flex" style=" padding: 12px;">
         <div>
           <img class="w-5 h-5 " src="messages.png" alt="">
         </div>
         <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
       </div>
-      <span class="badge" style="color: white;font-size: 14px;">\{{tinNhanMoi}}</span>
     </a>
 
     <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
@@ -109,7 +108,7 @@
 
   <!--Main area-->
 
-  <div style="height: 989px">
+  <div class="flex-1">
     <!--Top navbar-->
     <div>
 
@@ -126,47 +125,44 @@
       </div>
     </div>
     <!--Top navbar-->
-    <div class="card-container flex m-7 space-x-6 " style=" height: 832px;  justify-content: center;">
+    <div style="width: 1179px ;margin-left: 45px;">
+      <figure class="highcharts-figure">
+        <div id="container"></div>
+      </figure>
 
-      <div id="load" class="spinner-border text-primary"></div>
-
-      <div class="card w-full" id="hienThidata" style="display: none">
-        <div style="width: 1179px">
-          <figure class="highcharts-figure">
-            <div id="container"></div>
-          </figure>
-
-          <div style="display: flex;align-items: center">
-            <div>
-              Thống kê năm:
-            </div>
-
-            <select id="dateYearSelect" name="dateYear"
-                    style="outline: none;padding: 8px;border-radius: 8px;cursor: pointer;margin-left: 14px;">
-              <option>2020</option>
-              <option>2021</option>
-              <option>2022</option>
-              <option>2023</option>
-              <option>2024</option>
-              <option>2025</option>
-              <option>2026</option>
-              <option>2027</option>
-              <option>2028</option>
-              <option>2029</option>
-            </select>
-          </div>
-
-
-          <figure class="highcharts-figure">
-            <div id="container2"></div>
-          </figure>
+      <div style="display: flex;align-items: center">
+        <div>
+          Thống kê năm:
         </div>
+
+        <select id="dateYearSelect" name="dateYear" style="outline: none;
+    padding: 8px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-left: 14px;">
+          <option>2020</option>
+          <option>2021</option>
+          <option>2022</option>
+          <option>2023</option>
+          <option>2024</option>
+          <option>2025</option>
+          <option>2026</option>
+          <option>2027</option>
+          <option>2028</option>
+          <option>2029</option>
+        </select>
       </div>
 
 
+      <figure class="highcharts-figure">
+        <div id="container2"></div>
+      </figure>
     </div>
+
+
   </div>
 </div>
+
 </body>
 <script>
 
@@ -175,13 +171,12 @@
     console.log(selectedValue);
     sreach(selectedValue)
   }
-
   var selectElement = document.getElementById("dateYearSelect");
   selectElement.onchange = handleSelectChange;
   selectElement.value = "2023";
 
-  function sreach(year) {
-    fetch('/statistics/revenue/' + year, {
+  function sreach(year){
+    fetch('/statistics/revenue/'+year, {
       method: 'GET',
       headers: {
         'Content-Type': 'application/json'
@@ -196,7 +191,7 @@
             dataAllRevenue.push(data[i].totalRevenue)
             dataAllProfit.push(data[i].totalProfit)
           }
-          highChartColum(year, dataAllRevenue, dataAllProfit)
+          highChartColum(year,dataAllRevenue, dataAllProfit)
         })
         .catch(error => {
           console.error(error);
@@ -222,11 +217,6 @@
             })
           }
           highChart(dataAll)
-          var load = document.getElementById("load")
-          var duLieu = document.getElementById("hienThidata")
-
-          load.style.display = "none"
-          duLieu.style.display = "block"
         })
         .catch(error => {
           console.error(error);
@@ -247,8 +237,7 @@
             dataAllRevenue.push(data[i].totalRevenue)
             dataAllProfit.push(data[i].totalProfit)
           }
-
-          highChartColum(2023, dataAllRevenue, dataAllProfit)
+          highChartColum(2023,dataAllRevenue, dataAllProfit)
         })
         .catch(error => {
           console.error(error);
@@ -256,7 +245,6 @@
   }
 
   loadData()
-
   //vẽ biểu đồ
   function highChart(dataAll) {
     Highcharts.chart('container', {
@@ -310,7 +298,7 @@
     });
   }
 
-  function highChartColum(year, dataAllRevenue, dataAllProfit) {
+  function highChartColum(year,dataAllRevenue, dataAllProfit) {
     Highcharts.chart('container2', {
       credits: {
         enabled: false
@@ -322,7 +310,7 @@
         type: 'column'
       },
       title: {
-        text: ' Doanh số và Lợi nhuận năm ' + year,
+        text: ' Doanh số và Lợi nhuận năm ' +year,
       },
       subtitle: {
         text: ' ',
@@ -360,60 +348,5 @@
       ]
     });
   }
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
-<script>
-  var vm = new Vue({
-    el: '#dataAll',
-    data: {
-      tinNhanMoi: 0,
-      donHangMoi: 0
-    },
-    methods: {
-
-      GetDataCart: function () {
-        var self = this;
-        fetch('/loadData', {
-          method: 'GET',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-        })
-            .then(response => response.json())
-            .then(data => {
-              self.donHangMoi = data[0].length
-            })
-            .catch(error => {
-              console.error(error);
-            });
-      },
-      GetAllDataChat: function () {
-        var self = this;
-        fetch('/chatAllShop', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          }
-        })
-            .then(response => response.json())
-            .then(data => {
-              self.tinNhanMoi = data.filter(item => item.status === true).length
-            })
-            .catch(error => {
-              console.error(error);
-            });
-      },
-
-    }
-
-  });
-  vm.GetAllDataChat();
-  vm.GetDataCart();
-  setInterval(() => {
-    vm.GetAllDataChat();
-    vm.GetDataCart();
-  }, 2345)
-
 </script>
 </html>
