--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -481,7 +481,7 @@
           </div>
 
           <div style="display: flex;" v-if="dataXemChiTiet.lyDoHuyDon">
-            Lý do hủy đơn:
+            Lý do hủy:
             <div style="font-weight: 600;margin-left: 7px;"> \{{dataXemChiTiet.lyDoHuyDon}}</div>
           </div>
         </div>
@@ -494,7 +494,8 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Xác nhận đơn tài khooản: \{{dataXacNhanDon.customer_email}}?</h5>
+          <h5 class="modal-title" id="exampleModalLabel" v-if="dataXacNhanDon.status === 5">Đồng ý trả hàng tài khooản: \{{dataXacNhanDon.customer_email}}?</h5>
+          <h5 class="modal-title" id="exampleModalLabel" v-else>Xác nhận đơn tài khooản: \{{dataXacNhanDon.customer_email}}?</h5>
           <button type="button" class="close" @click="closeModalXacNhanDon" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -538,6 +539,10 @@
             Tổng tiền:
             <div style="color: red;font-weight: 700;margin-left: 7px;"> \{{formatPrice(dataXacNhanDon.total_All)}}</div>
           </div>
+          <div style="display: flex;" v-if="dataXacNhanDon.lyDoHuyDon">
+            Lý do hủy:
+            <div style="font-weight: 600;margin-left: 7px;"> \{{dataXacNhanDon.lyDoHuyDon}}</div>
+          </div>
         </div>
 
 
@@ -558,7 +563,8 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Hủy đơn tài khoản: \{{dataHuyDon.customer_email}}?</h5>
+          <h5 class="modal-title" id="exampleModalLabel"  v-if="dataHuyDon.status === 5">Từ chối trả hàng tài khoản: \{{dataHuyDon.customer_email}}?</h5>
+          <h5 class="modal-title" id="exampleModalLabel" v-else>Hủy đơn tài khoản: \{{dataHuyDon.customer_email}}?</h5>
           <button type="button" class="close" @click="closeModalHuyDon" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -602,15 +608,19 @@
               Tổng tiền:
               <div style="color: red;font-weight: 700;margin-left: 7px;"> \{{formatPrice(dataHuyDon.total_All)}}</div>
             </div>
-
+          
+          <div style="display: flex;" v-if="dataHuyDon.lyDoHuyDon">
+            Lý do hủy:
+            <div style="font-weight: 600;margin-left: 7px;"> \{{dataHuyDon.lyDoHuyDon}}</div>
+          </div>
 
 
           <form @submit.prevent="submitHuyDon" class="mb-3">
             <div class="form-group">
-              <label for="product_title">Lý do hủy đơn</label>
+
               <input type="text" class="form-control"
                      v-model="formData.noiDung" required
-                     placeholder="Vui lòng nhập lý do hủy đơn">
+                     placeholder="Vui lòng nhập lý do ">
             </div>
             <button type="button" class="btn btn-secondary"
                     data-dismiss="modal"> Thoát
