--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -117,10 +117,8 @@
           <img src="person.png" class="w-10 h-10" alt="">
           <span class="block p-2">Admin</span>
         </div>
-        <div class="right md:w-1/4 sm:w-2/3 flex  justify-content-end ">
-          <!--
-                              <img src="message.png" class="w-7 h-7 bg-gray-100 rounded-full p-1 mx-2 my-4 cursor-pointer" alt="">
-          -->
+        <div class="right md:w-1/4 sm:w-2/3 flex" style="justify-content: end;">
+          <a href="/login" style=" text-decoration: none; color: black; line-height: 58px; margin-right: 24px; ">Đăng xuất</a>
         </div>
       </div>
     </div>
