--- a/Server/Views/screenWarehouse.hbs
+++ b/Server/Views/screenWarehouse.hbs
@@ -122,7 +122,7 @@
                         <span class="block p-2">Admin</span>
                     </div>
                     <div class="right md:w-1/4 sm:w-2/3 flex  justify-content-end ">
-                        <!--   <img src="message.png" class="w-7 h-7 bg-gray-100 rounded-full p-1 mx-2 my-4 cursor-pointer" alt="">-->
+                      <a href="/login" style=" text-decoration: none; color: black; line-height: 58px; margin-right: 24px; ">Đăng xuất</a>
                     </div>
                 </div>
             </div>
