--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -480,6 +480,9 @@
             Tổng tiền:
             <div style="color: red;font-weight: 700;margin-left: 7px;"> \{{formatPrice(dataXemChiTiet.total_All)}}</div>
           </div>
+          <div style="display: flex; text-align: end;justify-content: end;">
+            Ngày đặt: \{{formatDate(dataXemChiTiet.order_date)}}
+          </div>
 
           <div style="display: flex;" v-if="dataXemChiTiet.lyDoHuyDon">
             Lý do hủy:
@@ -541,6 +544,9 @@
             Tổng tiền:
             <div style="color: red;font-weight: 700;margin-left: 7px;"> \{{formatPrice(dataXacNhanDon.total_All)}}</div>
           </div>
+          <div style="display: flex; text-align: end;justify-content: end;">
+            Ngày đặt: \{{formatDate(dataXacNhanDon.order_date)}}
+          </div>
           <div style="display: flex;" v-if="dataXacNhanDon.lyDoHuyDon">
             Lý do hủy:
             <div style="font-weight: 600;margin-left: 7px;"> \{{dataXacNhanDon.lyDoHuyDon}}</div>
@@ -565,8 +571,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel" v-if="dataHuyDon.status === 5">Từ chối trả hàng tài khoản: \
-            {{dataHuyDon.customer_email}}?</h5>
+          <h5 class="modal-title" id="exampleModalLabel" v-if="dataHuyDon.status === 5">Từ chối trả hàng tài khoản: \{{dataHuyDon.customer_email}}?</h5>
           <h5 class="modal-title" id="exampleModalLabel" v-else>Hủy đơn tài khoản: \{{dataHuyDon.customer_email}}?</h5>
           <button type="button" class="close" @click="closeModalHuyDon" aria-label="Close">
             <span aria-hidden="true">&times;</span>
@@ -611,7 +616,9 @@
             Tổng tiền:
             <div style="color: red;font-weight: 700;margin-left: 7px;"> \{{formatPrice(dataHuyDon.total_All)}}</div>
           </div>
-
+          <div style="display: flex; text-align: end;justify-content: end;margin-bottom: 8px;">
+            Ngày đặt: \{{formatDate(dataHuyDon.order_date)}}
+          </div>
           <div style="display: flex;" v-if="dataHuyDon.lyDoHuyDon">
             Lý do hủy:
             <div style="font-weight: 600;margin-left: 7px;"> \{{dataHuyDon.lyDoHuyDon}}</div>
@@ -729,6 +736,13 @@
       }
     },
     methods: {
+      formatDate(vale) {
+        const date = new Date(vale);
+        const year = date.getFullYear();
+        const month = date.getMonth() + 1;
+        const day = date.getDate();
+        return `${day}-${month}-${year}`;
+      },
       formatPrice(value) {
         let val = (value / 1).toFixed(0);
         return val.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",") + " đ";
