--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -147,7 +147,7 @@
               </div>
 
               <div style="margin: 0 10px;">
-                <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('choLayHang')">Đang chuẩn bị hàng
+                <button class="btn-cf" style=" padding: 0 8px;" onclick="openOrder('choLayHang')">Chờ lấy hàng
                 </button>
                 <span id="totalChoLayHang" class="position-absolute translate-middle badge rounded-pill bg-danger"
                       style="color: white">
@@ -480,10 +480,12 @@
             Tổng tiền:
             <div style="color: red;font-weight: 700;margin-left: 7px;"> \{{formatPrice(dataXemChiTiet.total_All)}}</div>
           </div>
-          <div style="display: flex; text-align: end;justify-content: end;">
+          <div style="display: flex; text-align: end;justify-content: end;" v-if="dataXemChiTiet.status === 3 || dataXemChiTiet.status === 9">
+            Ngày giao: \{{formatDate(dataXemChiTiet.order_date)}}
+          </div>
+<div style="display: flex; text-align: end;justify-content: end;" v-if="dataXemChiTiet.status !== 3 && dataXemChiTiet.status !== 9">
             Ngày đặt: \{{formatDate(dataXemChiTiet.order_date)}}
           </div>
-
           <div style="display: flex;" v-if="dataXemChiTiet.lyDoHuyDon">
             Lý do hủy:
             <div style="font-weight: 600;margin-left: 7px;"> \{{dataXemChiTiet.lyDoHuyDon}}</div>
