--- a/Server/Views/screenHome.hbs
+++ b/Server/Views/screenHome.hbs
@@ -61,51 +61,50 @@
 </head>
 
 <body class="bg-gray-200">
-<div id="donHangAll" class="flex ">
+<div id="donHangAll" class="flex " style="height: 100%">
   <!--Side Navbar-->
   <div class="bg-indigo-900 w-1/6">
     <div class=" bg-indigo-800">
       <div class=" text-xl text-gray-200 uppercase font-bold" style="padding: 33px;">Shop BipBip</div>
     </div>
-    <a href="/statistic" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
-       style="text-decoration: none ">
-      <div class="flex" style=" padding: 12px;">
-        <div>
-          <img class="w-5 h-5" src="analytics.png" alt="">
+    <div>
+      <a href="/statistic" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
+         style="text-decoration: none ">
+        <div class="flex" style=" padding: 12px;">
+          <div>
+            <img class="w-5 h-5" src="analytics.png" alt="">
+          </div>
+          <div class="mx-3 text-sm text-gray-100 ">Thống kê</div>
         </div>
-        <div class="mx-3 text-sm text-gray-100 ">Thống kê</div>
-      </div>
-    </a>
-    <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
-       style="display: flex;border-bottom-width: 1px; text-decoration: none ">
-      <div class="flex" style=" padding: 12px;">
-        <div>
-          <img class="w-5 h-5" src="dashboard.png" alt="">
+      </a>
+      <a href="/home" class=" cursor-pointer mess ml-3 mt-3 w-10/12"
+         style="display: flex;border-bottom-width: 1px; text-decoration: none ">
+        <div class="flex" style=" padding: 12px;">
+          <div>
+            <img class="w-5 h-5" src="dashboard.png" alt="">
+          </div>
+          <div class="mx-3 text-sm text-gray-100 ">Đơn Hàng</div>
         </div>
-        <div class="mx-3 text-sm text-gray-100 ">Đơn Hàng</div>
-      </div>
-      <span class="badge" style="color: white;font-size: 14px;">\{{donHangMoi}}</span>
-    </a>
-
-
-    <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
-      <div class="flex" style="padding: 12px;">
-        <div>
-          <img class="w-5 h-5 " src="messages.png" alt="">
+        <span class="badge" style="color: white;font-size: 14px;">\{{donHangMoi}}</span>
+      </a>
+      <a href="/mess" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="display: flex; text-decoration: none">
+        <div class="flex" style="padding: 12px;">
+          <div>
+            <img class="w-5 h-5 " src="messages.png" alt="">
+          </div>
+          <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
         </div>
-        <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
-      </div>
-      <span class="badge" style="color: white;font-size: 14px;">\{{tinNhanMoi}}</span>
-    </a>
-
-    <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
-      <div class="flex" style=" padding: 12px;">
-        <div>
-          <img class="w-5 h-5" src="kho.svg" alt="">
+        <span class="badge" style="color: white;font-size: 14px;">\{{tinNhanMoi}}</span>
+      </a>
+      <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+        <div class="flex" style=" padding: 12px;">
+          <div>
+            <img class="w-5 h-5" src="kho.svg" alt="">
+          </div>
+          <div class="mx-3 text-sm text-gray-100">Kho Hàng</div>
         </div>
-        <div class="mx-3 text-sm text-gray-100">Kho Hàng</div>
-      </div>
-    </a>
+      </a>
+    </div>
   </div>
   <!--Side Navbar-->
 
@@ -126,7 +125,7 @@
       </div>
     </div>
     <!--Top navbar-->
-    <div class="card-container flex m-7 space-x-6 " style=" height: 832px;  justify-content: center;">
+    <div class="card-container flex m-7 space-x-6 " style=" justify-content: center;">
 
       <div id="load" class="spinner-border text-primary"></div>
 
@@ -192,7 +191,7 @@
           <div id="selectedText"></div>
         </div>
 
-        <div style="height: 729px;
+        <div style="    height: 456px;
                       margin: 7px;
                       border-radius: 8px;
                       padding: 8px;
