--- a/Server/Views/screenAccountManagement.hbs
+++ b/Server/Views/screenAccountManagement.hbs
@@ -105,7 +105,7 @@
           <div class="mx-3 text-sm text-gray-100">Thông báo</div>
         </div>
       </a>
-      <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+      <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="border-bottom-width: 1px; text-decoration: none">
         <div class="flex" style=" padding: 12px;">
           <div>
             <img class="w-5 h-5" src="account.png" alt="">
@@ -114,7 +114,7 @@
         </div>
       </a>
       <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12"
-         style="border-bottom-width: 1px; text-decoration: none">
+         style="text-decoration: none">
         <div class="flex" style=" padding: 12px;">
           <div>
             <img class="w-5 h-5" src="kho.svg" alt="">
