--- a/Server/Views/screenStatistics.hbs
+++ b/Server/Views/screenStatistics.hbs
@@ -91,6 +91,22 @@
           <div class="mx-3 text-sm text-gray-100 ">Tin Nhắn</div>
         </div>
       </a>
+      <a href="/notifications" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+        <div class="flex" style=" padding: 12px;">
+          <div>
+            <img class="w-5 h-5" src="notifications.png" alt="">
+          </div>
+          <div class="mx-3 text-sm text-gray-100">Thông báo</div>
+        </div>
+      </a>
+      <a href="/accountManagement" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
+        <div class="flex" style=" padding: 12px;">
+          <div>
+            <img class="w-5 h-5" src="account.png" alt="">
+          </div>
+          <div class="mx-3 text-sm text-gray-100">Quản lý tài khoản</div>
+        </div>
+      </a>
       <a href="/warehouse" class="cursor-pointer mess ml-3 mt-3 w-10/12" style="text-decoration: none">
         <div class="flex" style=" padding: 12px;">
           <div>
