--- a/Server/Views/customer.hbs
+++ b/Server/Views/customer.hbs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quản lí người dùng</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
     <style>
         table {
             width: 100%;
@@ -12,7 +17,8 @@
             margin-bottom: 20px;
         }
 
-        th, td {
+        th,
+        td {
             text-align: left;
             border: 1px solid #ddd;
             width: 14.28vw;
@@ -35,13 +41,40 @@
             background-color: #c1a31c;
         }
 
-        th:nth-child(1), td:nth-child(1) { width: 15%; }
-        th:nth-child(2), td:nth-child(2) { width: 15%; }
-        th:nth-child(3), td:nth-child(3) { width: 10%; }
-        th:nth-child(4), td:nth-child(4) { width: 15%; }
-        th:nth-child(5), td:nth-child(5) { width: 25%; }
-        th:nth-child(6), td:nth-child(6) { width: 15%; }
-        th:nth-child(7), td:nth-child(7) { width: 30%; }
+        th:nth-child(1),
+        td:nth-child(1) {
+            width: 15%;
+        }
+
+        th:nth-child(2),
+        td:nth-child(2) {
+            width: 15%;
+        }
+
+        th:nth-child(3),
+        td:nth-child(3) {
+            width: 10%;
+        }
+
+        th:nth-child(4),
+        td:nth-child(4) {
+            width: 15%;
+        }
+
+        th:nth-child(5),
+        td:nth-child(5) {
+            width: 25%;
+        }
+
+        th:nth-child(6),
+        td:nth-child(6) {
+            width: 15%;
+        }
+
+        th:nth-child(7),
+        td:nth-child(7) {
+            width: 30%;
+        }
 
         .action-buttons {
             display: flex;
@@ -74,23 +107,28 @@
             padding: 5px;
             width: 200px;
         }
-         .filter-container {
+
+        .filter-container {
             margin-bottom: 20px;
         }
 
         .filter-label {
             margin-right: 10px;
         }
+         .modal-footer button {
+            cursor: pointer;
+        }
     </style>
 </head>
+
 <body>
-    <div class="container">
+     <div class="container">
         <h2>Danh sách khách hàng</h2>
-        
+
         <div class="search-container">
             <input type="text" class="search-input" id="searchInput" placeholder="Tìm kiếm...">
         </div>
-         <div class="filter-container">
+        <div class="filter-container">
             <label class="filter-label">Hiển thị:</label>
             <input type="radio" name="statusFilter" id="allUsers" checked>
             <label for="allUsers">Tất cả</label>
@@ -103,6 +141,7 @@
             <table class="table">
                 <thead>
                     <tr>
+                        <th scope="col">ID</th>
                         <th scope="col">Ảnh đại diện</th>
                         <th scope="col">Tên</th>
                         <th scope="col">Giới tính</th>
@@ -116,41 +155,81 @@
                 </thead>
                 <tbody>
                     {{#each data}}
-                        <tr>
-                            <td><img src="{{profile.avatar}}" alt="Avatar" width="100"></td>
-                            <td>{{profile.fullname}}</td>
-                            <td>{{profile.gender}}</td>
-                            <td>{{profile.birthday}}</td>
-                            <td>{{profile.username}}</td>
-                            <td>{{address.phone}}</td>
-                            <td>{{address.address}}</td>
-                            <td>{{profile.status}}</td>
-                            <td class="action-buttons">
-                                {{#if profile.status}}
-                                    <button class="ban-button">Chặn</button>
-                                {{else}}
-                                    <button class="unban-button">Mở chặn</button>
-                                {{/if}}
-                            </td>
-                        </tr>
+                    <tr>
+                        <td style="color: #ff0000;">{{_id}}</td>
+                        <td><img src="{{profile.avatar}}" alt="Avatar" width="100"></td>
+                        <td>{{profile.fullname}}</td>
+                        <td>{{profile.gender}}</td>
+                        <td>{{profile.birthday}}</td>
+                        <td>{{profile.username}}</td>
+                        <td>{{address.phone}}</td>
+                        <td>{{address.address}}</td>
+                        <td>{{profile.status}}</td>
+                          <td class="action-buttons">
+                            {{#if profile.status}}
+                            <button class="unban-button" data-toggle="modal" data-target="#blockUserModal"
+                                data-user-id="{{_id}}">Mở chặn</button>
+                            {{else}}
+                            <button class="ban-button" data-toggle="modal" data-target="#blockUserModal"
+                                data-user-id="{{_id}}" onclick="setUserId('{{_id}}')">Chặn</button>
+                            {{/if}}
+                        </td>
+
+                    </tr>
                     {{/each}}
                 </tbody>
             </table>
         </div>
+        <form action="/block/" method="POST" id="blockForm">
+            <div class="modal" id="blockUserModal" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Chặn người dùng</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <label for="UserId">ID: <span id="modalUserId"></span></label>
+                            <br>
+                            <label for="blockReason">Nhập nội dung chặn:</label>
+                            <input type="text" class="form-control" id="blockReason" name="blockReason">
+                            <input type="hidden" id="modalUserIdInput" name="userId">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                            <button type="button" class="btn btn-primary" onclick="submitBlockForm()">Chặn</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
-
     <script>
-        document.getElementById('searchInput').addEventListener('input', function() {
+        function setUserId(userId) {
+            document.getElementById('modalUserId').innerText = userId;
+            document.getElementById('modalUserIdInput').value = userId;
+        }
+
+      function submitBlockForm() {
+    var blockReason = document.getElementById('blockReason').value;
+    var userId = document.getElementById('modalUserId').innerText;
+    document.getElementById('modalUserIdInput').value = userId;
+    document.getElementById('blockForm').submit();
+}
+
+
+        document.getElementById('searchInput').addEventListener('input', function () {
             var filter = this.value.toLowerCase();
             var rows = document.querySelectorAll('tbody tr');
-            
-            rows.forEach(function(row) {
+
+            rows.forEach(function (row) {
                 var text = row.innerText.toLowerCase();
                 row.style.display = text.includes(filter) ? '' : 'none';
             });
         });
-    </script>
-     <script>
+
         var statusFilterRadios = document.getElementsByName('statusFilter');
         var searchInput = document.getElementById('searchInput');
 
@@ -160,7 +239,7 @@
 
             var rows = document.querySelectorAll('tbody tr');
 
-            rows.forEach(function(row) {
+            rows.forEach(function (row) {
                 var text = row.innerText.toLowerCase();
                 var status = row.querySelector('.action-buttons button').innerText.toLowerCase();
                 var shouldDisplay = text.includes(filter) && (
@@ -173,11 +252,13 @@
             });
         }
 
-        statusFilterRadios.forEach(function(radio) {
+        statusFilterRadios.forEach(function (radio) {
             radio.addEventListener('change', filterRows);
         });
 
         searchInput.addEventListener('input', filterRows);
     </script>
+
 </body>
+
 </html>
